--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
-    "mongoose": "^8.14.0",
+    "mongoose": "^8.14.1",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "path": "^0.12.7",
     "process": "^0.11.10",
