--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "openai": "^4.98.0",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "sequelize": "^6.37.7"
