🔁 재배포 테스트. added : mysql, mongodb connection info

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,15 @@ jobs:
             --name drawingi \
             -p 3000:3000 \
             -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+            -e MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
+            -e MYSQL_HOST=${{ secrets.MYSQL_HOST }} \
+            -e MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
+            -e MYSQL_PORT=${{ secrets.MYSQL_PORT }} \
+            -e MYSQL_USER=${{ secrets.MYSQL_USER }} \
+            -e MONGODB_PASSWORD=${{ secrets.MONGODB_PASSWORD }} \
+            -e MONGODB_PORT=${{ secrets.MONGODB_PORT }} \
+            -e MONGODB_URI=${{ secrets.MONGODB_URI }} \
+            -e MONGODB_USER=${{ secrets.MONGODB_USER }} \                                                
             drawingi
 
         EOF
