--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,18 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+      MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
+      MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      MYSQL_PORT: ${{ secrets.MYSQL_PORT }}
+      MYSQL_USER: ${{ secrets.MYSQL_USER }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+      MONGODB_PORT: ${{ secrets.MONGODB_PORT }}
+      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      MONGODB_USER: ${{ secrets.MONGODB_USER }}
+
     steps:
     - name: Checkout source
       uses: actions/checkout@v3
@@ -21,7 +33,17 @@ jobs:
     - name: Deploy to EC2 via SSH
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-          # EC2 내부 경로에 클론하거나 pull
+          export OPENAI_API_KEY="$OPENAI_API_KEY"
+          export MYSQL_DATABASE="$MYSQL_DATABASE"
+          export MYSQL_HOST="$MYSQL_HOST"
+          export MYSQL_PASSWORD="$MYSQL_PASSWORD"
+          export MYSQL_PORT="$MYSQL_PORT"
+          export MYSQL_USER="$MYSQL_USER"
+          export MONGODB_PASSWORD="$MONGODB_PASSWORD"
+          export MONGODB_PORT="$MONGODB_PORT"
+          export MONGODB_URI="$MONGODB_URI"
+          export MONGODB_USER="$MONGODB_USER"
+
           if [ ! -d ~/app ]; then
             git clone https://github.com/${{ github.repository }} ~/app
           else
@@ -30,25 +52,22 @@ jobs:
 
           cd ~/app
 
-          # 기존 컨테이너 종료
           docker stop drawingi || true
           docker rm drawingi || true
 
-          # 이미지 빌드 & 컨테이너 실행
           docker build -t drawingi .
           docker run -d \
             --name drawingi \
             -p 3000:3000 \
-            -e OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
-            -e MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
-            -e MYSQL_HOST=${{ secrets.MYSQL_HOST }} \
-            -e MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
-            -e MYSQL_PORT=${{ secrets.MYSQL_PORT }} \
-            -e MYSQL_USER=${{ secrets.MYSQL_USER }} \
-            -e MONGODB_PASSWORD=${{ secrets.MONGODB_PASSWORD }} \
-            -e MONGODB_PORT=${{ secrets.MONGODB_PORT }} \
-            -e MONGODB_URI=${{ secrets.MONGODB_URI }} \
-            -e MONGODB_USER=${{ secrets.MONGODB_USER }} \                                                
+            -e OPENAI_API_KEY \
+            -e MYSQL_DATABASE \
+            -e MYSQL_HOST \
+            -e MYSQL_PASSWORD \
+            -e MYSQL_PORT \
+            -e MYSQL_USER \
+            -e MONGODB_PASSWORD \
+            -e MONGODB_PORT \
+            -e MONGODB_URI \
+            -e MONGODB_USER \
             drawingi
-
         EOF
